docs/4.21/virt/managing_vms/advanced_vm_management/virt-vm-control-plane-tuning.md
You can configure how the control plane handles concurrency when you create or migrate virtual machines (VMs). For example, set the `QPS` or `burst` rates to batch create virtual machines (VMs) in a batch, or tune migration settings in the `HyperConverged` custom resource (CR).

# Configuring a highBurst profile

You can use the `highBurst` profile to create and maintain a large number of virtual machines (VMs) in one cluster.

- You have installed the OpenShift CLI (`oc`).

<!-- -->

- Apply the following patch to enable the `highBurst` tuning policy profile:

  ``` terminal
  $ oc patch hyperconverged kubevirt-hyperconverged -n openshift-cnv \
    --type=json -p='[{"op": "add", "path": "/spec/tuningPolicy", \
    "value": "highBurst"}]'
  ```

<!-- -->

- Run the following command to verify the `highBurst` tuning policy profile is enabled:

  ``` terminal
  $ oc get kubevirt.kubevirt.io/kubevirt-kubevirt-hyperconverged \
    -n openshift-cnv -o go-template --template='{{range $config, \
    $value := .spec.configuration}} {{if eq $config "apiConfiguration" \
    "webhookConfiguration" "controllerConfiguration" "handlerConfiguration"}} \
    {{"\n"}} {{$config}} = {{$value}} {{end}} {{end}} {{"\n"}}
  ```
